--- a/MATHFORMULAS.html
+++ b/MATHFORMULAS.html
@@ -1233,7 +1233,7 @@ body{background-color:black;}
 <table id="BOX20">
 <tr>
   <th>NUMBER</th>
-  <th>THE AMOUNT OF INTEREST(সুদকষার পরিমান) FORMULA IN BANGLA</th>
+  <th> FORMULA IN BANGLA</th>
 </tr>
 <tr>
   <td>1</td>
@@ -1253,7 +1253,7 @@ body{background-color:black;}
 </tr>
 <tr>
   <td>5</td>
-  <td>আসল = {100×(সুদ-মূল)}÷(100+সুদের হার×সময় )</td>
+  <td> আসল = {100×(সুদ-মূল)}÷(100+সুদের হার×সময় )</td>
 </tr>
 <tr>
   <td>6</td>
@@ -1262,6 +1262,622 @@ body{background-color:black;}
 <tr>
   <td>7</td>
   <td>সুদাসল = আসল ×(1+ সুদের হার)× সময় |[চক্রবৃদ্ধি সুদের ক্ষেত্রে]।</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING21{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX21{border-collapse:collapse;
+    width:100% }
+
+#BOX21 td, #BOX21 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX21 tr:nth-child(even){background-color:lime;}
+
+#BOX21 tr:nth-child(odd){background-color:cyan;}
+
+#BOX21 td{color:black}
+
+#BOX21 tr:hover {background-color:red;}
+
+#BOX21 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING21">NO.21</h1>
+<table id="BOX21">
+<tr>
+  <th>NUMBER</th>
+  <th>PROFIT-LOSS AND SALE-PURCHASE(লাভ-ক্ষতির এবং ক্রয়-বিক্রয়) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>লাভ = বিক্রয়মূল্য-ক্রয়মূল্য</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>ক্ষতি = ক্রয়মূল্য-বিক্রয়মূল্য</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>ক্রয়মূল্য = বিক্রয়মূল্য-লাভ অথবা ক্রয়মূল্য = বিক্রয়মূল্য + ক্ষতি</td>
+</tr>
+<tr>
+  <td>4</td>
+  <td>বিক্রয়মূল্য = ক্রয়মূল্য + লাভ অথবা বিক্রয়মূল্য = ক্রয়মূল্য-ক্ষতি</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING22{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX22{border-collapse:collapse;
+    width:100% }
+
+#BOX22 td, #BOX22 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX22 tr:nth-child(even){background-color:lime;}
+
+#BOX22 tr:nth-child(odd){background-color:cyan;}
+
+#BOX22 td{color:black}
+
+#BOX22 tr:hover {background-color:red;}
+
+#BOX22 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING22">NO.22</h1>
+<table id="BOX22">
+<tr>
+  <th>NUMBER</th>
+  <th>EASY WAY TO REMEMBER PRIME NUMBERS FROM 1-100(1-100 পর্যন্ত মৌলিক সংখ্যামনে রাখার সহজ উপায়) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>শর্টকাট :- 44 -22 -322-321</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>1থেকে100পর্যন্ত মৌলিক সংখ্যা=25টি</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>1থেকে10পর্যন্ত মৌলিক সংখ্যা=4টি 2,3,5,7</td>
+</tr>
+<tr>
+  <td>4</td>
+  <td>11থেকে20পর্যন্ত মৌলিক সংখ্যা=4টি 11,13,17,19</td>
+</tr>
+<tr>
+  <td>5</td>
+  <td>21থেকে30পর্যন্ত মৌলিক সংখ্যা=2টি 23,29</td>
+</tr>
+<tr>
+  <td>6</td>
+  <td>31থেকে40পর্যন্ত মৌলিক সংখ্যা=2টি 31,37</td>
+</tr>
+<tr>
+  <td>7</td>
+  <td>41থেকে50পর্যন্ত মৌলিক সংখ্যা=3টি 41,43,47</td>
+</tr>
+<tr>
+  <td>8</td>
+  <td>51থেকে 60পর্যন্ত মৌলিক সংখ্যা=2টি 53,59</td>
+</tr>
+<tr>
+  <td>9</td>
+  <td>61থেকে70পর্যন্ত মৌলিক সংখ্যা=2টি 61,67</td>
+</tr>
+<tr>
+  <td>10</td>
+  <td>71থেকে80 পর্যন্ত মৌলিক সংখ্যা=3টি 71,73,79</td>
+</tr>
+<tr>
+  <td>11</td>
+  <td>81থেকে 90পর্যন্ত মৌলিক সংখ্যা=2টি 83,89</td>
+</tr>
+<tr>
+  <td>12</td>
+  <td>91থেকে100পর্যন্ত মৌলিক সংখ্যা=1টি 97</td>
+</tr>
+<tr>
+  <td>13</td>
+  <td>1-100 পর্যন্ত মৌলিক সংখ্যা 25 টিঃ 2,3,5,7,11,13,17,19,23,29,31,37,41,43,47,53,59,61,67,71,73,79,83,89,97</td>
+</tr>
+<tr>
+  <td>14</td>
+  <td>1-100পর্যন্ত মৌলিক সংখ্যার যোগফল 1060।</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING23{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX23{border-collapse:collapse;
+    width:100% }
+
+#BOX23 td, #BOX23 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX23 tr:nth-child(even){background-color:lime;}
+
+#BOX23 tr:nth-child(odd){background-color:cyan;}
+
+#BOX23 td{color:black}
+
+#BOX23 tr:hover {background-color:red;}
+
+#BOX23 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING23">NO.23</h1>
+<table id="BOX23">
+<tr>
+  <th>NUMBER</th>
+  <th>SPEED AND DISTANCE TRAVELED(গতিবেগ এবং  অতিক্রান্ত দূরত্ব) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>কোন কিছুর গতিবেগ= অতিক্রান্ত দূরত্ব/সময়</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>অতিক্রান্ত দূরত্ব = গতিবেগ×সময়</td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>সময়= মোট দূরত্ব/বেগ</td>
+</tr>
+<tr>
+  <td>4</td>
+  <td>স্রোতের অনুকূলে নৌকার কার্যকরী গতিবেগ = নৌকার প্রকৃত গতিবেগ + স্রোতের গতিবেগ।</td>
+</tr>
+<tr>
+  <td>5</td>
+  <td>স্রোতের প্রতিকূলে নৌকার কার্যকরী গতিবেগ = নৌকার প্রকৃত গতিবেগ - স্রোতের গতিবেগ</td>
+</tr>
+<tr>
+  <td>6</td>
+  <td>স্রোতের বেগ = (স্রোতের অনুকূলে নৌকার বেগ - স্রোতের প্রতিকূলে নৌকার বেগ) /2</td>
+</tr>
+<tr>
+  <td>7</td>
+  <td>নৌকার বেগ = (স্রোতের অনুকূলে নৌকার বেগ+স্রোতের প্রতিকূলে নৌকার বেগ)/2</td>
+</tr>
+<tr>
+  <td>8</td>
+  <td>মােট সময় = [(মােট দূরত্ব/ অনুকূলে বেগ) + (মােট দূরত্ব/প্রতিকূলে বেগ)]</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING24{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX24{border-collapse:collapse;
+    width:100% }
+
+#BOX24 td, #BOX24 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX24 tr:nth-child(even){background-color:lime;}
+
+#BOX24 tr:nth-child(odd){background-color:cyan;}
+
+#BOX24 td{color:black}
+
+#BOX24 tr:hover {background-color:red;}
+
+#BOX24 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING24">NO.24</h1>
+<table id="BOX24">
+<tr>
+  <th>NUMBER</th>
+  <th>SIMPLE INTEREST(সরল সুদ) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>যদি আসল=P, সময়=T, সুদের হার=R, সুদ-আসল=A হয়, তাহলে সুদের পরিমাণ= PRT/100</td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>যদি আসল=P, সময়=T, সুদের হার=R, সুদ-আসল=A হয়, তাহলে আসল= 100×সুদ-আসল(A)/100+TR</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING25{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX25{border-collapse:collapse;
+    width:100% }
+
+#BOX25 td, #BOX25 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX25 tr:nth-child(even){background-color:lime;}
+
+#BOX25 tr:nth-child(odd){background-color:cyan;}
+
+#BOX25 td{color:black}
+
+#BOX25 tr:hover {background-color:red;}
+
+#BOX25 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING25">NO.25</h1>
+<table id="BOX25">
+<tr>
+  <th>NUMBER</th>
+  <th>THE SUM OF THE SERIAL NUMBERS OF THE PARALLEL SERIES(সমান্তর ধারার ক্রমিক সংখ্যার যোগফল) FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td>(যখন সংখ্যাটি1 থেকে শুরু)1+2+3+4+......+n হলে এরূপ ধারার সমষ্টি= [n(n+1)/2] n=শেষ সংখ্যা বা পদ সংখ্যা s=যোগফল</td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING26{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX26{border-collapse:collapse;
+    width:100% }
+
+#BOX26 td, #BOX26 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX26 tr:nth-child(even){background-color:lime;}
+
+#BOX26 tr:nth-child(odd){background-color:cyan;}
+
+#BOX26 td{color:black}
+
+#BOX26 tr:hover {background-color:red;}
+
+#BOX26 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING26">NO.26</h1>
+<table id="BOX26">
+<tr>
+  <th>NUMBER</th>
+  <th> FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+<tr>
+  <td>7</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING27{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX27{border-collapse:collapse;
+    width:100% }
+
+#BOX27 td, #BOX27 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX27 tr:nth-child(even){background-color:lime;}
+
+#BOX27 tr:nth-child(odd){background-color:cyan;}
+
+#BOX27 td{color:black}
+
+#BOX27 tr:hover {background-color:red;}
+
+#BOX27 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING27">NO.27</h1>
+<table id="BOX27">
+<tr>
+  <th>NUMBER</th>
+  <th> FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+<tr>
+  <td>7</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING28{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX28{border-collapse:collapse;
+    width:100% }
+
+#BOX28 td, #BOX28 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX28 tr:nth-child(even){background-color:lime;}
+
+#BOX28 tr:nth-child(odd){background-color:cyan;}
+
+#BOX28 td{color:black}
+
+#BOX28 tr:hover {background-color:red;}
+
+#BOX28 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING28">NO.28</h1>
+<table id="BOX28">
+<tr>
+  <th>NUMBER</th>
+  <th> FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+<tr>
+  <td>7</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING29{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX29{border-collapse:collapse;
+    width:100% }
+
+#BOX29 td, #BOX29 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX29 tr:nth-child(even){background-color:lime;}
+
+#BOX29 tr:nth-child(odd){background-color:cyan;}
+
+#BOX29 td{color:black}
+
+#BOX29 tr:hover {background-color:red;}
+
+#BOX29 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING29">NO.29</h1>
+<table id="BOX29">
+<tr>
+  <th>NUMBER</th>
+  <th> FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+<tr>
+  <td>7</td>
+  <td></td>
+</tr>
+</table>
+<head>
+  <style>
+#HEADING30{text-align:center;
+         color:red;
+         text-decoration:underline;}
+
+#BOX30{border-collapse:collapse;
+    width:100% }
+
+#BOX30 td, #BOX30 th {border: 1px solid #ddd;
+                   padding: 8px;}
+
+#BOX30 tr:nth-child(even){background-color:lime;}
+
+#BOX30 tr:nth-child(odd){background-color:cyan;}
+
+#BOX30 td{color:black}
+
+#BOX30 tr:hover {background-color:red;}
+
+#BOX30 th {padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: left;
+        background-color:blue;
+        color:red;}
+
+  </style>
+</head>
+<body>
+<h1 id="HEADING30">NO.30</h1>
+<table id="BOX30">
+<tr>
+  <th>NUMBER</th>
+  <th> FORMULA IN BANGLA</th>
+</tr>
+<tr>
+  <td>1</td>
+  <td></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td></td>
+</tr>
+<tr>
+  <td>6</td>
+  <td></td>
+</tr>
+<tr>
+  <td>7</td>
+  <td></td>
 </tr>
 </table>
 </html>
